# block_sparse_attn_wheels

./: README.md  pyproject.toml  start_runner.sh
.github/actions/read-uv-version/: action.yaml
.github/workflows/: build_block_sparse_attn.yaml
scripts/: build_block_sparse_attn.sh
