[project]
name = "bsa-standalone"
version = "0.1.0"
description = "Standalone builder for Block-Sparse Attention"
readme = "README.md"
requires-python = ">=3.10.12,<3.11"
dependencies = [
    "torch==2.9.1+cu130",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
